<resources>
    <string name="app_name">Coink</string>
    <string name="app_sponsor">LA ALCANCÍA QUE SIEMPRE TE ACOMPAÑA</string>
    <string name="onboarding_signup">REGÍSTRATE</string>
    <string name="onboarding_signin">INGRESA</string>
    <string name="phone_screen_title">NÚMERO CELULAR</string>
    <string name="phone_screen_message">Para comenzar, por favor ingresa tu número celular</string>
    <string name="end_screen_title">FINALIZAR</string>
    <string name="end_screen_header_title">ESTAS MUY CERCA DE SER PARTE DE COINK.</string>
    <string name="end_screen_header_message">Solo es necesario que leas detenidamente el contrato que se encuentra al final de esta pantalla y lo aceptes.</string>
    <string name="end_screen_important_title">LO MÁS IMPORTANTE</string>
    <string name="end_screen_terms_accept">ACEPTAR</string>
    <string name="end_screen_terms_and_conditions">He leído y acepto el contrato</string>
    <string name="end_screen_terms_and_conditions_error">Debe aceptar los terminos y condiciones</string>
    <string name="end_screen_important_message">Para la apertura del Depósito de Bajo Monto en COINK debes ser una persona natural que de acuerdo con nuestra legislación vigente te encuentres en plena capacidad para adquirir derechos y contraer obligaciones. \n\n\nAbrirás una cuenta COINK de Bajo Monto la cual te permitirá tener un saldo hasta por 8 salarios mínimos en el mes y realizar débitos por el mismo valor. Si deseas sobrepasar estos límites debes solicitarnos la apertura de un Depósito Ordinario COINK Persona Natural. \n\n\nSolo puedes tener una cuenta COINK de Bajo Monto y podrás utilizar tu dispositivo móvil para consultar tu saldo, tus movimientos, realizar tus transacciones y administrar tu cuenta. Recuerda que no necesitas saldo mínimo ni monto inicial para su apertura.</string>
    <string name="account_detail_screen_title">DATOS DE CUENTA</string>
    <string name="account_detail_screen_header_title">¿CUÁLES SON TUS DATOS?</string>
    <string name="account_detail_screen_header_message">Ahora necesitamos saber algunos datos tuyos</string>
    <string name="account_detail_screen_document">Documento de Identidad</string>
    <string name="account_detail_screen_document_type">Tipo de Documento</string>
    <string name="account_detail_screen_document_number">Numero de Documento</string>
    <string name="account_detail_screen_expedition_date">Fecha de Expedicion de Documento</string>
    <string name="account_detail_screen_date_birth">Fecha de Nacimiento</string>
    <string name="account_detail_screen_next">SIGUIENTE</string>
    <string name="account_detail_screen_gender">Genero</string>
    <string name="account_detail_screen_account_config">Configura tu Cuenta</string>
    <string name="account_detail_screen_email">Correo Electronico</string>
    <string name="account_detail_screen_confirm_email">Confirmar Correo Electronico</string>
    <string name="account_detail_screen_security_pin">PIN de Seguridad</string>
    <string name="account_detail_screen_confirm_security_pin">Confirmar PIN de Seguridad</string>
    <string name="account_detail_screen_email_error">Email no valido</string>
    <string name="account_detail_screen_email_confirm_error">Emails no coincide</string>
    <string name="account_detail_screen_pin_error">Su pin no puede contener menos de 4 numeros</string>
    <string name="account_detail_screen_pin_confirm_error">No coincide sus pin</string>
    <string name="account_detail_screen_empty_error">Campo requerido</string>
    <string name="dialog_gif_title">¡Bienvenido a Coink!</string>
    <string name="dialog_gif_message">¡Cuenta creada exitosamente, tu marrano ya está listo para que empieces a ahorrar!</string>
    <string name="dialog_gif_continue">CONTINUAR</string>
</resources>