<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.coink.widgets.HeaderView
        android:id="@+id/headerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:header_drawable="@drawable/ic_step_bar_finish"
        app:header_title="@string/end_screen_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/space_24">

            <com.coink.widgets.ItemCoinkTextHorizontal
                android:id="@+id/coinkText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_24"
                app:icon_drawable="@drawable/ic_oink_police"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:text_message="@string/end_screen_header_message"
                app:text_title="@string/end_screen_header_title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_24"
                android:layout_marginTop="@dimen/space_40"
                android:text="@string/end_screen_important_title"
                android:textColor="@color/secondary_color"
                android:theme="@style/MontserratBoldText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/coinkText" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView_message"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_24"
                android:layout_marginTop="@dimen/space_16"
                android:gravity="start"
                android:text="@string/end_screen_important_message"
                android:textColor="@color/secondary_color"
                android:theme="@style/AvenirRomanText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_title" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkbox_terms"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_24"
                android:layout_marginTop="@dimen/space_16"
                android:text="@string/end_screen_terms_and_conditions"
                android:theme="@style/AvenirRomanText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_message" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_accept"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_24"
                android:layout_marginTop="@dimen/space_16"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/end_screen_terms_accept"
                android:textColor="@color/secondary_color"
                android:theme="@style/Coink.BaseButton"
                app:backgroundTint="@color/primary_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkbox_terms" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>