<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/space_24">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView_gif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_24"
        android:layout_marginTop="@dimen/space_40"
        android:layout_marginHorizontal="@dimen/space_24"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_oink_gif" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dialog_gif_title"
        android:layout_marginHorizontal="@dimen/space_24"
        android:layout_marginTop="@dimen/space_32"
        android:textColor="@color/secondary_color"
        android:theme="@style/MontserratBoldText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_gif" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginHorizontal="@dimen/space_24"
        android:text="@string/dialog_gif_message"
        android:layout_marginTop="@dimen/space_12"
        android:textColor="@color/secondary_color"
        android:theme="@style/AvenirRomanText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_continue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_24"
        android:layout_marginTop="@dimen/space_32"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/dialog_gif_continue"
        android:theme="@style/Coink.BaseButton"
        android:textColor="@color/secondary_color"
        app:backgroundTint="@color/primary_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_message" />
</androidx.constraintlayout.widget.ConstraintLayout>